test/test-cases/verify/negative/malformed-no-predicate_fail/bundle.sig
{
  "mediaType": "application/vnd.dev.sigstore.bundle.v0.3+json",
  "verificationMaterial": {
    "publicKey": {
      "hint": "e8450dec4eb99dae995da9af1bc2cc9f76ed669ee2e744f57abba763df3e3f8e"
    },
    "tlogEntries": []
  },
  "dsseEnvelope": {
    "payload": "eyJfdHlwZSI6ICJodHRwczovL2luLXRvdG8uaW8vU3RhdGVtZW50L3YxIiwgInN1YmplY3QiOiBbeyJuYW1lIjogIm1vZGVsIiwgImRpZ2VzdCI6IHsic2hhMjU2IjogIjkyNzQ1MTEwYjFhYjQzNjg0NzFjYmUzMTY2NGUxMDE3NGU5NTRiMTEzYTNkZjMzM2RiODYwMzE3YjJjNmRlYzQifX1dLCAicHJlZGljYXRlVHlwZSI6ICJodHRwczovL21vZGVsX3NpZ25pbmcvc2lnbmF0dXJlL3YxLjAifQ==",
    "payloadType": "application/vnd.in-toto+json",
    "signatures": [
      {
        "sig": "MGQCMDNHlJBKxhHVeSWQ+RWXT2LKSOcd3fF6jQLxRs8zdXnJI9Ff8zKrDeMLvprDzqzKZQIwQmpMu2WZsNmlfMD+5S0UqwBnJ3/xLPjO+bYmBn/c5fg80jHloGe9fmjR5d57Y1XM",
        "keyid": ""
      }
    ]
  }
}